# esp32-can-multibackend

./: .gitmodules  README.md  flash_manager.py  sdkconfig.defaults  test_compilation.py
components/can_backend_arduino/: CMakeLists.txt  arduino_adapter.c
components/can_backend_mcp2515_multi/: CMakeLists.txt  mcp2515_config_types.h  mcp2515_multi_adapter.c  mcp2515_multi_adapter.h
components/can_backend_mcp2515_multi/mcp2515-esp32_multi/: README.md  can_message.h  mcp2515_multi.c  mcp2515_multi.h  mcp2515_multi_if.c  mcp2515_multi_if.h  mcp2515_multi_internal.h
components/can_backend_mcp2515_multi/mcp2515-esp32_multi/hw_config/: spi_bus_config.h  spi_device_config.h
components/can_backend_mcp2515_single/: CMakeLists.txt  mcp2515_single_adapter.c  mcp2515_single_adapter.h
components/can_backend_twai/: CMakeLists.txt  twai_adapter.c  twai_adapter.h  twai_config_types.h
components/can_dispatch/: CMakeLists.txt  can_dispatch.c  can_dispatch.h  can_dispatch_mcp2515_single.c  can_dispatch_mcp2515_single.h
components/can_message/: CMakeLists.txt  can_message.h
components/examples_utils/: CMakeLists.txt  examples_utils.c  examples_utils.h
components/twai-idf-can/: README.md
components/twai-idf-can/components/examples_utils/: CMakeLists.txt  LICENSE  README.md  examples_utils.c  idf_component.yml
components/twai-idf-can/components/examples_utils/include/: examples_utils.h
components/twai-idf-can/examples/: config_twai.h
components/twai-idf-can/examples/receive_poll/main/: CMakeLists.txt
doc/: single_setup.wiring.xml
examples/: README.md  can_single_MCP25xxx_config.h  config_twai.h  hw_init_by_settings.h  init_hardware.c  init_hardware.h  receive_poll_single.c  send_multi.c  send_single.c
examples/multi/: config_hw_mcp2515_multi_receive.h  config_hw_mcp2515_multi_send.h  receive_interrupt_multi.c  receive_poll_multi.c  send_multi.c
examples/single/: config_hw_mcp2515_multiple.h  config_hw_mcp2515_single.h  config_hw_twai.h  receive_interrupt_single.c  receive_poll_single.c  send_single.c
main/: CMakeLists.txt  Kconfig.projbuild
py/: app_gui.py  app_logic.py  commands.py  flash_app_logic.py  kconfig_options.py  sdkconfig_options.py  system_comands.py
py/config/: kconfig_options.py  sdkconfig_options.py
py/gui/: app_gui.py  build_flash_tab.py  serial_monitor_tab.py
py/gui/css/: serial_monitor_tab.css
py/log/: rich_log_extended.py  rich_log_handler.py
py/monitor/: base_monitor_logic.py  fake_monitor_logic.py  fake_monitor_script.py  monitor_gui_logic.py  serial_monitor_logic.py  shell_monitor_logic.py
py/shell_commands/: __init__.py  shell_command_config.py  shell_command_process.py
py/tech_tests/: gui_app.py  log_minimal.py
