set(EXAMPLES_DIR ${CMAKE_SOURCE_DIR}/examples)


# By Kconfig select the example to build
if(CONFIG_EXAMPLE_SEND_SINGLE)
    list(APPEND APP_SRC "${EXAMPLES_DIR}/single/send_single.c")
elseif(CONFIG_EXAMPLE_RECV_POLL_SINGLE)
    list(APPEND APP_SRC "${EXAMPLES_DIR}/single/receive_poll_single.c")
elseif(CONFIG_EXAMPLE_RECV_INT_SINGLE)
    list(APPEND APP_SRC "${EXAMPLES_DIR}/single/receive_interrupt_single.c")
elseif(CONFIG_EXAMPLE_SEND_MULTI)
    list(APPEND APP_SRC "${EXAMPLES_DIR}/multi/send_multi.c")
elseif(CONFIG_EXAMPLE_RECV_POLL_MULTI)
    list(APPEND APP_SRC "${EXAMPLES_DIR}/multi/receive_poll_multi.c")
elseif(CONFIG_EXAMPLE_RECV_INT_MULTI)
    list(APPEND APP_SRC "${EXAMPLES_DIR}/multi/receive_interrupt_multi.c")
endif()

# Build required component list conditionally by selected backend
set(REQUIRES_DEPS can_dispatch examples_utils)

if(CONFIG_CAN_BACKEND_TWAI)
    list(APPEND REQUIRES_DEPS twai-idf-can)
endif()

if(CONFIG_CAN_BACKEND_MCP2515_SINGLE)
    list(APPEND REQUIRES_DEPS can_backend_mcp2515_single)
    # unified MCP2515 config types are provided by the multi component
    list(APPEND REQUIRES_DEPS can_backend_mcp2515_multi)
endif()

if(CONFIG_CAN_BACKEND_MCP2515_MULTI)
    list(APPEND REQUIRES_DEPS can_backend_mcp2515_multi)
endif()

idf_component_register(
    SRCS ${APP_SRC}
    INCLUDE_DIRS "." "${EXAMPLES_DIR}"
    REQUIRES ${REQUIRES_DEPS}
)
